Fixes: - ops, need to add curly braces here, it is a list/array

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.1
+Date: 2025-03-27
+  Fixes:
+    - ops, need to add curly braces here, it is a list/array
+---------------------------------------------------------------------------------------------------
 Version: 1.2.0
 Date: 2025-03-27
   Fixes:
