Fixes: - missed to change these, too (yes small ruins isn't still a loop)

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.2
+Date: 2025-03-27
+  Fixes:
+    - missed to change these, too (yes small ruins isn't still a loop)
+---------------------------------------------------------------------------------------------------
 Version: 1.2.1
 Date: 2025-03-27
   Fixes:
