Fixes: - renamed `<l|m|s>_runins` variable to only `ruins` - ops, need to insert each small ruin ... ;-)

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.4
+Date: 2025-03-27
+  Fixes:
+    - renamed `<l|m|s>_runins` variable to only `ruins`
+    - ops, need to insert each small ruin ... ;-)
+---------------------------------------------------------------------------------------------------
 Version: 1.2.3
 Date: 2025-03-27
   Fixes:
