Fixes: - `mods` was/is a mod shorthand to `scripts.active_mods` and is not generic

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.7
+Date: 2025-04-12
+  Fixes:
+    - `mods` was/is a mod shorthand to `scripts.active_mods` and is not generic
+---------------------------------------------------------------------------------------------------
 Version: 1.2.6
 Date: 2025-04-12
   Changes:
