Fixes: - Parameter `size` was wrongfully documented as `number` must be `string`

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.10
+Date: 2025-04-26
+  Fixes:
+    - Parameter `size` was wrongfully documented as `number` must be `string`
+---------------------------------------------------------------------------------------------------
 Version: 1.2.9
 Date: 2025-04-19
   Changes:
