Fixed: - had to rename `stack-inserter` to `bulk-inserter` (thanks to @Dogman15 for   reporting this)

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.11
+Date: 2025-06-07
+ Fixed:
+    - had to rename `stack-inserter` to `bulk-inserter` (thanks to @Dogman15 for reporting this)
+---------------------------------------------------------------------------------------------------
 Version: 1.2.10
 Date: 2025-04-26
   Fixes:
