Changes: - excluded `AbandonedRuins_updated_fork` as they both does the same

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.13
+Date: 2025-07-18
+  Changes:
+    - excluded `AbandonedRuins_updated_fork` as they both does the same
+---------------------------------------------------------------------------------------------------
 Version: 1.2.12
 Date: 2025-07-18
   Changes:
