Continued: - added asserts on surface.valid (should always be?) - removed again `AbandonedRuins_updated_fork` as *this* fork may merge into the   other and then *this* is deprecated

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.14
+Date: 2025-xx-xx
+  Changes:
+    - added asserts on surface.valid (should always be?)
+---------------------------------------------------------------------------------------------------
 Version: 1.2.13
 Date: 2025-07-18
   Changes:
