--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.0.4
+Date: 2025-07-20
+  Changes:
+    - deactivated ruin splitterI as `random-splitter` is not working ATM
+---------------------------------------------------------------------------------------------------
 Version: 0.0.3
 Date: 2025-07-19
   Changes:
