--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.0.6
+Date 2025-07-22:
+  Documentation:
+    - added `format.md` from `AbandonedRuins_updated_fork` mod
+    - added `CONTRIBUTION.md` for how to contribute ruins
+    - added `migration.md` for how to migrate your mod to 1.3.3
+  Changes:
+    - bumped version of `AbandonedRuins_updated_fork`
+---------------------------------------------------------------------------------------------------
 Version: 0.0.5
 Date: 2025-07-20
   Changes:
