--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.4
+Date: 2025-11-27
+  Changes:
+    - let's not use `table.insert()` anymore when `foos[#foos] = foo` is enough and possibly faster
+---------------------------------------------------------------------------------------------------
 Version: 0.1.3
 Date: 2025-08-24
   Minor:
