Changes: - exclude ruins with water on vulcanus, too

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.5
+Date: 2025-11-27
+  Changes:
+    - exclude ruins with water on vulcanus, too
+---------------------------------------------------------------------------------------------------
 Version: 0.1.4
 Date: 2025-11-27
   Changes:
